--- a/base/Makefile
+++ b/base/Makefile
@@ -1,13 +1,13 @@
-PROJECT = awesomesauce
+PROJECT = base
 BUILD_DIR = bin
 
-SHARED_DIR = ../my-common-code
-CFILES = my-project.c
+SHARED_DIR = ../shared
+CFILES = my-main.c
 CFILES += api.c
 AFILES += api-asm.S
 
 # TODO - you will need to edit these two lines!
-DEVICE=stm32f407vgt6
+DEVICE=stm32f411re
 OOCD_FILE = board/stm32f4discovery.cfg
 
 # You shouldn't have to edit anything below here.
