--- a/base/Makefile
+++ b/base/Makefile
@@ -7,7 +7,7 @@ CFILES += api.c
 AFILES += api-asm.S
 
 # TODO - you will need to edit these two lines!
-DEVICE=stm32f411re
+DEVICE=stm32f411ce
 OOCD_FILE = board/stm32f4discovery.cfg
 
 # You shouldn't have to edit anything below here.
